slow and steady wins the race.. maybe..